[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://entities/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/death_2.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/death_1.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/double_jump_2.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/double_jump_1.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/jump_2.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/jump_1.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/dash_2.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/dash_1.wav" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.5, 13 )

[sub_resource type="Animation" id=2]
resource_name = "DashLeft"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 66, 67, 68 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12, 8.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3, 7.5 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "DashRight"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 60, 61, 62 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12, 8.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 7.5 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 9.5, 13.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 2.5 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 9.5, 13.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.5, 2.5 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 31 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.00125514 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -0.5, 1 ), Vector2( -0.5, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.00125514 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 9.5, 13 ), Vector2( 9.5, 13 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 25 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 9.5, 13 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "RollLeft"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 42, 43, 44, 45, 46 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 10, 12 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "RollRight"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 40 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 10, 12 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.434846 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 10, 11.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.434846 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3.5, 4.5 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3.5, 4.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 10, 11.5 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 54 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 9, 12.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2, 0.5 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 48 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 9, 12.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 0.5 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 47
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 1 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
smoothing_speed = 10.0

[node name="WalkOffPlatformCooldown" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[node name="WasSlidingCooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="DashLifetime" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/DashLeft = SubResource( 2 )
anims/DashRight = SubResource( 3 )
anims/IdleLeft = SubResource( 4 )
anims/IdleRight = SubResource( 5 )
anims/JumpLeft = SubResource( 6 )
anims/JumpRight = SubResource( 7 )
anims/RollLeft = SubResource( 8 )
anims/RollRight = SubResource( 9 )
anims/RunLeft = SubResource( 10 )
anims/RunRight = SubResource( 11 )
anims/WallSlideLeft = SubResource( 12 )
anims/WallSlideRight = SubResource( 13 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 6
vframes = 12
frame = 25

[node name="Sounds" type="Node" parent="."]

[node name="Jump" type="Node" parent="Sounds"]

[node name="Jump1" type="AudioStreamPlayer" parent="Sounds/Jump"]
stream = ExtResource( 9 )
volume_db = 5.0

[node name="Jump2" type="AudioStreamPlayer" parent="Sounds/Jump"]
stream = ExtResource( 8 )
volume_db = 5.0

[node name="DoubleJump" type="Node" parent="Sounds"]

[node name="DoubleJump1" type="AudioStreamPlayer" parent="Sounds/DoubleJump"]
stream = ExtResource( 7 )
volume_db = 5.0

[node name="DoubleJump2" type="AudioStreamPlayer" parent="Sounds/DoubleJump"]
stream = ExtResource( 6 )
volume_db = 5.0

[node name="Death" type="Node" parent="Sounds"]

[node name="Death1" type="AudioStreamPlayer" parent="Sounds/Death"]
stream = ExtResource( 4 )
volume_db = 22.0

[node name="Death2" type="AudioStreamPlayer" parent="Sounds/Death"]
stream = ExtResource( 3 )
volume_db = 22.069

[node name="Dash" type="Node" parent="Sounds"]

[node name="Dash1" type="AudioStreamPlayer" parent="Sounds/Dash"]
stream = ExtResource( 11 )

[node name="Dash2" type="AudioStreamPlayer" parent="Sounds/Dash"]
stream = ExtResource( 10 )

[connection signal="timeout" from="WalkOffPlatformCooldown" to="." method="_on_WalkOffPlatformCoolDown_timeout"]
[connection signal="timeout" from="WasSlidingCooldown" to="." method="_on_WasSlidingCooldown_timeout"]
[connection signal="timeout" from="DashLifetime" to="." method="_on_DashLifetime_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_DashCooldown_timeout"]
[connection signal="finished" from="Sounds/Death/Death1" to="." method="_on_DeathAudio_finished"]
[connection signal="finished" from="Sounds/Death/Death2" to="." method="_on_DeathAudio_finished"]
